trying to fix the shifting sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ input.button {
         font-size: 1.5em;
 	list-style: none;
 	margin: 0; padding: 0;		
-	text-transform: uppercase;		
+	text-transform: uppercase;		`
 }
 #header-content li {
 	display: inline;
@@ -299,7 +299,7 @@ input.button {
 	padding: 5px 0 0 0;
 }
 #sidebar h1 {
-	position: inherit;
+	position: relative;
 	font: normal 1.4em Georgia, "Times New Roman", Times, serif;
 	color: #336699;
 	padding: 0;
@@ -307,18 +307,18 @@ input.button {
 	letter-spacing:0px;	
 }
 #sidebar ul.sidemenu {
-	position: inherit;
+	position: relative;
 	margin: 5px 0 15px 0;
 	padding: 0;	
 }
 #sidebar ul.sidemenu li {
-	position: inherit;
+	position: relative;
 	font: normal 1.2em Candara, 'Trebuchet MS', Tahoma, sans-serif;
 	list-style: none;
 	border-bottom: 1px dashed #E1E1E1;
 }
 #sidebar ul.sidemenu a {
-	position: inherit;
+	position: relative;
 	display: block;
 	color: #666666; 
 	text-decoration: none;
@@ -326,7 +326,7 @@ input.button {
 	width: 94%;
 }
 #sidebar ul.sidemenu a:hover {
-	position: inherit;
+	position: relative;
 	padding: .3em 0 .3em 10px;
 	color: #336699;
 	background: #FFF;	
